--- a/donate.html
+++ b/donate.html
@@ -1,1 +1,26 @@
-<iframe src="https://money.yandex.ru/quickpay/shop-widget?writer=buyer&targets=&targets-hint=%D0%9F%D0%BE%D0%B6%D0%B5%D1%80%D1%82%D0%B2%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5%20%D0%BD%D0%B0%20%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D1%8B&default-sum=10&button-text=14&payment-type-choice=on&mobile-payment-type-choice=on&hint=&successURL=&quickpay=shop&account=410012034583851" width="100%" height="227" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
+<html>
+<head>
+	<title>Поддержите автора</title>
+</head>
+<body>
+	<iframe src="https://money.yandex.ru/quickpay/shop-widget?writer=buyer&targets=&targets-hint=%D0%9F%D0%BE%D0%B6%D0%B5%D1%80%D1%82%D0%B2%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5%20%D0%BD%D0%B0%20%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D1%8B&default-sum=10&button-text=14&payment-type-choice=on&mobile-payment-type-choice=on&hint=&successURL=&quickpay=shop&account=410012034583851" width="100%" height="227" frameborder="0" allowtransparency="true" scrolling="no" class="yandex-frame"></iframe>
+	<style>
+		body {
+			background-color: #eee;
+		}
+		.yandex-frame {
+			position: absolute;
+			top: 25%;
+			left: 0;
+			right: 0;
+			margin: auto;
+			width: 40%;
+			display: block;
+		}
+		.widget-shop {
+			border-radius: 10px;
+			box-shadow: 1px 1px 1px 10px #aaa;
+		}
+	</style>
+</body>
+</html>
